# PyzureCLI

./: README.md  pyproject.toml
legacy_dist/: pyzurecli-0.6.0-py3-none-any.whl  pyzurecli-0.6.1-py3-none-any.whl  pyzurecli-0.6.2-py3-none-any.whl  pyzurecli-0.7-py3-none-any.whl  pyzurecli-0.7.1-py3-none-any.whl  pyzurecli-0.7.2-py3-none-any.whl  pyzurecli-0.7.3-py3-none-any.whl  pyzurecli-0.7.400-py3-none-any.whl  pyzurecli-0.7.401-py3-none-any.whl  pyzurecli-0.7.402-py3-none-any.whl
pyzurecli/: __init__.py  app_registration.py  factory.py  pyproject.toml  pyzureserver.py  sp.py  user.py  util.py
pyzurecli/.deprecated/: azure_cli.py  azure_manager.py
src/: demo.py  test.py
src/pyzurecli/: __init__.py  app_registration.py  factory.py  graph.py  graph_api.py  mail.py  models.py  pyzuremsal.py  pyzureserver.py  sp.py  user.py  util.py
src/pyzurecli/.deprecated/: graph_api.py  pyzureserver.py
src/pyzurecli/pkg_graph_api/: __init__.py  class_graph_api.py  mod_util.py
src/pyzurecli/pkg_graph_api/pkg_filters/: __init__.py  mod_email_filters.py  mod_people_filters.py  test_email_features.py
src/pyzurecli/pkg_graph_api/pkg_messages/: .gitignore  __init__.py  mod_get_messages.py  mod_list_messages.py  test_list_messages.py
src/pyzurecli/pkg_graph_api/pkg_safe_request/: __init__.py  mod_safe_request.py
src/pyzurecli/pkg_graph_api/pkg_sanitize_email/: __init__.py
src/pyzurecli/pkg_graph_api/pkg_todos/: __init__.py
src/pyzurecli/pkg_graph_api/pkg_type_check_emails/: test_type_check_emails.py
src/pyzurecli/templates/: email.html  person.html
