# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyzurecli"
version = "0.6.1"
description = "Async Azure CLI automation via Docker-based isolation"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Miles Copeland Luce" }
]
dependencies = [
  "loguru>=0.5.3",
  "dockwershell>=0.6.0",
  "singleton-decorator",
  "gowershell>=0.2.0"
]

[project.urls]
Repository    = "https://github.com/genderlessput/pyzurecli"

#[project.scripts]
## Entry through factory.py: exposes the `az` client
#pyzurecli = "pyzurecli.factory:debug"
