[project]
name = "pyzurecli"
version = "0.6.2"
description = "Async Azure CLI automation via Docker-based isolation"
authors = [
    {name = "genderlesspit",email = "59433707+genderlesspit@users.noreply.github.com"}
]
readme = "README.md"
requires-python =  ">=3.13,<4.0"
dependencies = [
    "singleton-decorator (>=1.0.0,<2.0.0)",
    "toomanythreads (>=0.2.3,<0.3.0)",
    "dockwershell (>=0.6,<0.7)",
    "loguru (>=0.7.3,<0.8.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]

[tool.poetry]
packages = [{include = "pyzurecli", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
